# session-android

./: .drone.jsonnet  .drone.yml  .gitignore  .gitmodules  BUILDING.md  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build_and_test.yml
.run/: Run Tests.run.xml
app/: agconnect-services.json  build.gradle  build.gradle.kts  google-services.json  ipToCode.gradle.kts  proguard-rules.pro
app/src/androidTest/: AndroidManifest.xml
app/src/huawei/: AndroidManifest.xml  agconnect-services.json
app/src/huawei/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/proto/: SignalService.proto
app/src/main/protobuf/: Makefile  SignalService.proto
app/src/main/res/anim/: fade_scale_in.xml  slide_to_bottom.xml
app/src/main/res/color/: button_danger.xml  button_destructive.xml  prominent_button_color.xml  state_list_call_action_foreground.xml  (+2 more)
app/src/play/: AndroidManifest.xml
app/src/test/resources/: robolectric.properties
build-logic/: build.gradle.kts
build-logic/src/main/groovy/: WitnessPlugin.groovy
build-logic/src/main/kotlin/: GenerateIPCountryDataPlugin.kt  RenameApkPlugin.kt
common/: build.gradle
content-descriptions/: build.gradle  build.gradle.kts
etc/: debug.keystore
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
liblazysodium/: build.gradle  build.gradle.kts  session-lazysodium-android.aar
libsession/: build.gradle  build.gradle.kts
libsession-util/: build.gradle
libsession-util/src/main/: AndroidManifest.xml
libsession-util/src/main/cpp/: CMakeLists.txt  blinded_key.cpp  config_base.cpp  config_base.h  config_common.cpp  contacts.cpp  contacts.h  conversation.cpp  conversation.h  group_info.cpp  group_info.h  group_keys.cpp  group_keys.h  group_members.cpp  group_members.h  jni_utils.h  logging.cpp  logging.h  user_groups.cpp  user_groups.h  user_profile.cpp  user_profile.h  util.cpp  util.h
libsignal/: build.gradle  build.gradle.kts
libsignal/protobuf/: Makefile  SignalService.proto
scripts/: README.md  build-and-release.py  drone-static-upload.sh  drone-upload-exists.sh
(+2260 files in other folders)
